<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure QR Reader</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">About &amp; Help</string>
    <string name="menu_history">History</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="toggle_torch">Toggle Torch</string>
    <string name="preferences_performed_checks">Enabled Security Checks</string>
    <string name="preferences_general_settings">General Settings</string>
    <string name="preferences_enabled_types">Enabled Code Types</string>
    <string name="preferences_beep_enabled">Beep</string>
    <string name="preferences_vibrate_enabled">Vibrate</string>
    <string name="preferences_copy_to_clipboard">Copy to Clipboard</string>
    <string name="preferences_history_duplicates">Store Duplicates</string>
    <string name="preferences_copy_to_clipboard_summary">Copy the result of a scan to the clipboard</string>
    <string name="preferences_history_duplicates_summary">Allow duplicate codes to be stored in the history</string>
    <string name="preferences_check_dummy">Dummy Check</string>
    <string name="preferences_scan_1d_industrial">1D Industrial</string>
    <string name="preferences_scan_1d_product">1D Product</string>
    <string name="preferences_scan_aztec">Aztec (beta)</string>
    <string name="preferences_scan_data_matrix">Data Matrix</string>
    <string name="preferences_scan_pdf417">PDF417 (beta)</string>
    <string name="preferences_scan_qr">QR Codes</string>
    <string name="button_ok">OK</string>
    <string name="msg_default_verification_status">0 checks done</string>
    <string name="msg_init_failed">Error initializing the camera</string>
    <string name="msg_scan_success">Code scanned!</string>
    <string name="msg_scan_info">Running security checks...</string>
    <string name="msg_completed">done</string>
    <string name="msg_checks_out_of">checks out of</string>
    <string name="msg_check_out_of">check out of</string>
    <string name="msg_all_checks_done">All checks done!</string>
    <string name="msg_content_header">Scanned data</string>
    <string name="no_checks_found">No checks found!</string>
    <string name="checks_pending">Security Checks pending</string>
    <string name="errors_found">The QR code is malicious!</string>
    <string name="preferences_check_safebrowsing">Google Safe Browsing</string>
    <string name="preferences_check_safebrowsing_desc">Check URLs against Google Safe Browsing</string>
    <string name="msg_safe_browsing_listed">URL listed in Google Safe Browsing!</string>
    <string name="msg_safe_browsing_unlisted">Not listed in Google Safe Browsing</string>
    <string name="msg_safe_browsing_invalid_url">Incorrect request URL</string>
    <string name="msg_safe_browsing_unavailable">Google Safe Browsing is not available</string>
    <string name="msg_phishtank_listed">URL listed in Phishtank!</string>
    <string name="msg_phishtank_unlisted">Not listed in Phishtank</string>
    <string name="msg_phishtank_unavailable">Phishtank is not available</string>
    <string name="preferences_check_phishtank">Phishtank</string>
    <string name="preferences_check_metrics"><![CDATA[URL & DNS Metrics]]></string>
    <string name="preferences_check_errorrate">Error Rate</string>
    <string name="preferences_check_errorrate_desc">Report an unusually high error rate when scanning a code</string>
    <string name="preferences_check_metrics_desc">Calculate various metrics to detect malicious URLs</string>
    <string name="preferences_check_phishtank_desc">Check URLs against Phishtank</string>
    <string name="button_open">Open in Browser</string>
    <string name="button_copy_to_clipboard">Copy to Clipboard</string>
    <string name="button_scan_report">Scan Report</string>
    <string name="report_activity">Security Report</string>
    <string name="msg_copied_to_clipboard">Copied result to clipboard</string>
    <string name="msg_copied_item_to_clipboard">Copied item to clipboard</string>
    <string name="msg_history_empty">The history is empty!</string>
    <string name="menu_clear">Clear history</string>
    <string name="msg_history_cleared">History cleared!</string>
    <string name="msg_error_tampered">Very high error rate: </string>
    <string name="msg_error_within_norm">Error Rates are within the norm</string>
    <string name="msg_error_limit">limit</string>
    <string name="msg_error_no_errors">No errors found</string>
    <string name="msg_no_app_to_open_with">No app can open this content!</string>
    <string name="msg_no_checks_performed">No checks performed!</string>
    <string name="msg_search_web">Search the web</string>
    <string name="msg_website_age_not_listed">Wayback machine doesn\'t know of the website!</string>
    <string name="preferences_check_dns_age">Dynamic DNS Record</string>
    <string name="preferences_check_dns_age_desc">Check for DNS records which can be easily changed</string>
    <string name="preferences_check_redirect_count">Redirect Count</string>
    <string name="preferences_check_redirect_count_desc">Check for websites with a high number of redirects</string>
    <string name="preferences_check_if_public">Available to Public</string>
    <string name="preferences_check_if_public_desc">Checks if the website is available to the general public</string>
    <string name="preferences_check_website_age">Website Age</string>
    <string name="preferences_check_website_age_desc">Checks if the website has been created very recently</string>
    <string name="msg_website_age_error_contact">Error contacting the Wayback Machine</string>
    <string name="msg_website_age_ok">The website was first seen on: </string>
    <string name="msg_website_age_too_young">The website is very young: </string>
    <string name="msg_if_public_yes">The site is available to search engines.</string>
    <string name="msg_if_public_error_contact">Error contacting the website</string>
    <string name="msg_is_public_no">The site is not available to search engines.</string>
    <string name="msg_dyndns_error">Error querying DNS server</string>
    <string name="msg_redirect_high_number">URL had a high number of redirects: </string>
    <string name="msg_redirect_low_number">URL only had few redirects: </string>
    <string name="msg_dns_ttl_ok">TTL is within the norm</string>
    <string name="msg_dyndns_yes">Dynamic DNS with TTL: </string>
    <string name="msg_dyndns_no_short">TTL is quite short: </string>
    <string name="msg_error_couldnt_calculate">Couldn\'t calculate error rate</string>
    <string name="preferences_advanced">Advanced Settings</string>
    <string name="preferences_signature_host">Signature Hostname</string>
    <string name="preferences_signature_port">Signature Server Port</string>
    <string name="preferences_signature_host_summary">Hostname of the Signature Server</string>
    <string name="preferences_signature_port_summary">The port at which the server listens</string>
    <string name="preferences_signature_protocol_summary">The protocol that the server speaks</string>
    <string name="preferences_signature_protocol">Signature Server Protocol</string>
    <string name="msg_signature_mismatch">The signature does not match</string>
    <string name="msg_signature_ok">Signature verifed by the server:</string>
    <string name="msg_signature_server_fail">Couldn\'t verify the hash with the server</string>
    <string name="preferences_check_signature_summary">Verify QR codes with an embedded signature against a server</string>
    <string name="preferences_check_signature">Signatures</string>
    <string name="msg_signature_not_found">The URL doesn\'t contain a signature</string>
    <string name="msg_first_launch">Welcome to Secure QR!\n\nThis app is meant to protect you from malicious QR codes. It does so by performing various security checks after scanning a code. More information can be found in the \"Help\" page in the top right menu.</string>
    <string name="msg_ack">Got it!</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_open_malicious">The URL might be harmful!\n\nA hacker could try to infect your device with a virus or extract sensitive information.\n\nAre you sure you want to open it?</string>
</resources>
