<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.rieder.secureqr.app.activities.ScanQRActivity">

    <item
        android:id="@+id/action_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:menuCategory="system"
        android:orderInCategory="1"
        android:title="@string/menu_history"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:menuCategory="system"
        android:orderInCategory="2"
        android:title="@string/menu_settings"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_clear_history"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:menuCategory="system"
        android:orderInCategory="3"
        android:title="@string/menu_clear"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:menuCategory="system"
        android:orderInCategory="4"
        android:title="@string/menu_help"
        app:showAsAction="withText" />

</menu>
