<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.rieder.secureqr.app.activities.ScanQRActivity"
    tools:ignore="MergeRootFrame">


    <SurfaceView
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right|bottom" />

    <at.rieder.secureqr.app.activities.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />


    <LinearLayout
        android:id="@+id/result_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/result_view"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">


        <TextView
            android:id="@+id/success_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:text="@string/msg_scan_success"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="60dp"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/overall_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_scan_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/current_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/msg_default_verification_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/result_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/warning" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/content_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/msg_content_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!--<ImageView
                 android:id="@+id/imageView"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="right"
                 android:layout_toLeftOf="@id/content_header"
                 android:src="@android:drawable/ic_menu_save" />-->
        </LinearLayout>


        <TextView
            android:id="@+id/scanned_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:autoLink="email|map|web"
            android:clickable="false"
            android:textAlignment="center"
            android:textStyle="normal"
            android:typeface="monospace" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/result_button_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/VerticalDivider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/button_open"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/VerticalDivider"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="openButtonPressed"
            android:text="@string/button_open" />

        <Button
            android:id="@+id/button_report"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/VerticalDivider"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="reportButtonPressed"
            android:text="@string/button_scan_report" />

    </RelativeLayout>
</FrameLayout>
